karl package Changelog
======================

Unreleased
----------

- LP #503771: Fixed day links on calendar list view.

3.15.1 (2010-01-11)
-------------------

- LP #503523: AttributeError: 'CalendarEvent' object has no attribute
  'color' (merge from trunk).

- LP #503450: Fixed that the hour and minute selectors on the add
  calendar event page would lose their all-day state if the user
  entered an end date that was before the start date. (merge from trunk).

- LP #503442: Fixed hardcoded year left in calendar week view template
  (merge from trunk).

- LP #496331: Calendar list view now shows a paginated listing of upcoming 
  events with 20 events per page.

- LP #497937 Corrected which tools are addable when creating a new community.
  (Backported from trunk.)

- LP #488152 Made initial site_acl used in boostrapping the same in core as
  what OSI uses.

- LP #488854 Added link to delete user in admin edit profile view.

- LP #505939 Fixed bug when trying to render edit form for calendar events that
  occur in a 'network-events' folder rather than a calendar.

- LP #505939 Fixed bug when trying to render edit form for calendar events that
  occur in a 'network-events' folder rather than a calendar. (Backported from
  trunk.)

3.15 (2009-12-14)
-----------------

- LP #496330: Clicking the (+) from the calendar month view now uses
  a default of 9:00am instead of 12:00am.

- LP #494701: Editing a calendar event now populates the form with
  the correct times.

- LP #492346: Clicking the (+) button to add a new event on the calendar
  views now populates a default date and time on the form based on the
  context of where (+) was clicked.

- LP #491991: An event's calendar category is now displayed when
  viewing the event.

- LP #491986: Constrain width of category selector on calendar setup page.

- Increase performance of jQuery selectors in calendar daily/weekly view

- Fix editing of calendar categories/layers when names have spaces
